[package]
name = "actix-web-condition-middleware"
version = "0.1.0"
authors = ["κeen <3han5chou7@gmail.com>"]
edition = "2018"
license = "APACHE-2.0/MTI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
actix-service = "0.4.2"
futures = "0.1.28"

[dev-dependencies]
env_logger = "0.6.2"
